# tts-kokoro-v613

./: .coverage  .gitignore  DEVELOPMENT_LOG.md  PROJECT_STATUS.md  Phase3_STAGE_PASS.md  SAD.md  SKILL.md  SPEC_TRACKING.md  SRS.md  TRACEABILITY_MATRIX.md  phase6_plan.md  pyproject.toml  requirement_mapping.json  run_const.sh  run_sp.sh  run_stage_pass.sh  spec_mapping.json
.methodology/: METHODOLOGY_V2_INVENTORY.md  SAB.json  fr_mapping.json  sab-phase2.json  state.json
.quality_dashboard/: agent_history.json  dashboard.html  history.json
00-summary/: ALL_PHASES_PLAN.md  Phase1_STAGE_PASS.md  Phase2_STAGE_PASS.md  Phase2_ThirdParty_Audit.md  Phase2_ThirdParty_Audit_v2.md  Phase5_STAGE_PASS.md  Phase7_STAGE_PASS.md  Phase_1_-_需求規格_STAGE_PASS.md  Phase_2_-_架構設計_STAGE_PASS.md  Phase_3_-_實作_STAGE_PASS.md  Phase_4_-_驗證_STAGE_PASS.md  Phase_5_-_系統測試_STAGE_PASS.md
01-requirements/: SRS.md  SRS.md.docx  SRS_raw.txt
02-architecture/: ADR-001-fastapi-proxy-layer.md  ADR-002-lazy-init-pattern.md  ADR-003-three-level-chunking.md  ADR-004-circuit-breaker-state-machine.md  ADR.md  ARCHITECTURE_REVIEW_AGENT_B.md  ARCHITECTURE_REVIEW_AGENT_B_v2.md  SAD.md
03-development/: .coverage  DEVELOPMENT_LOG.md  IMPLEMENTATION.md  coverage.xml
04-testing/: TEST_PLAN.md  TEST_RESULTS.md
05-verify/: BASELINE.md  MONITORING_PLAN.md  QUALITY_REPORT.md  VERIFICATION_REPORT.md
06-quality/: QUALITY_REPORT.md
07-risk/: RISK_MITIGATION_PLANS.md  RISK_REGISTER.md  RISK_STATUS_REPORT.md
08-config/: CONFIG_RECORDS.md
app/: circuit_breaker.py
docs/: CHANGELOG.md  GIT_TAG_v8.0.md  (+7 more)
(+133 files in other folders)
